--- a/TippspielClient/TippspielClient.csproj
+++ b/TippspielClient/TippspielClient.csproj
@@ -66,7 +66,10 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Controller\MainWindowController.cs" />
+    <Compile Include="Framework\RelayCommand.cs" />
+    <Compile Include="Framework\ViewModelBase.cs" />
     <Compile Include="MatchDay.cs" />
+    <Compile Include="ViewModels\TeamHelper.cs" />
     <Compile Include="ViewModels\WindowLoginViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
