--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -62,11 +62,15 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Controller\MainWindowController.cs" />
+    <Compile Include="Controller\WindowEditSeasonController.cs" />
     <Compile Include="Controller\WindowEditTeamController.cs" />
     <Compile Include="Controller\WindowAddTeamController.cs" />
     <Compile Include="Controller\WindowEditBettorController.cs" />
     <Compile Include="Controller\WindowAddBettorController.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\TeamHelper.cs" />
+    <Compile Include="ViewModels\WindowMatchViewModel.cs" />
+    <Compile Include="ViewModels\WindowSeasonViewModel.cs" />
     <Compile Include="ViewModels\WindowTeamViewModel.cs" />
     <Compile Include="ViewModels\WindowBettorViewModel.cs" />
     <Compile Include="App.xaml.cs">
@@ -75,14 +79,17 @@
     </Compile>
     <Compile Include="Framework\RelayCommand.cs" />
     <Compile Include="Framework\ViewModelBase.cs" />
-    <Compile Include="Views\CantDeleteBettor.xaml.cs">
-      <DependentUpon>CantDeleteBettor.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\WindowMatch.xaml.cs">
+      <DependentUpon>WindowMatch.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\WindowBettor.xaml.cs">
       <DependentUpon>WindowBettor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WindowSeason.xaml.cs">
+      <DependentUpon>WindowSeason.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WindowTeam.xaml.cs">
       <DependentUpon>WindowTeam.xaml</DependentUpon>
@@ -125,6 +132,7 @@
     <None Include="Properties\DataSources\Server.WcfModels.WcfBet.datasource" />
     <None Include="Properties\DataSources\Server.WcfModels.WcfBettor.datasource" />
     <None Include="Properties\DataSources\Server.WcfModels.WcfMatch.datasource" />
+    <None Include="Properties\DataSources\Server.WcfModels.WcfRelation.datasource" />
     <None Include="Properties\DataSources\Server.WcfModels.WcfSeason.datasource" />
     <None Include="Properties\DataSources\Server.WcfModels.WcfTeam.datasource" />
     <None Include="Properties\Settings.settings">
@@ -145,15 +153,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\CantDeleteBettor.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Views\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\WindowMatch.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\WindowBettor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\WindowSeason.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
