--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LigaService.cs" />
+    <Compile Include="SeasonGenerator.cs" />
     <Compile Include="WcfModels\WcfBet.cs" />
     <Compile Include="WcfModels\WcfBettor.cs" />
     <Compile Include="WcfModels\WcfMatch.cs" />
