--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Controller\MainWindowController.cs" />
+    <Compile Include="Controller\WindowAddSeasonController.cs" />
     <Compile Include="Controller\WindowEditMatchController.cs" />
     <Compile Include="Controller\WindowAddMatchController.cs" />
     <Compile Include="Controller\WindowEditSeasonController.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Controller\WindowAddBettorController.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\TeamHelper.cs" />
+    <Compile Include="ViewModels\WindowAddSeasonViewModel.cs" />
     <Compile Include="ViewModels\WindowEditMatchViewModel.cs" />
     <Compile Include="ViewModels\WindowAddMatchViewModel.cs" />
     <Compile Include="ViewModels\WindowSeasonViewModel.cs" />
@@ -87,6 +89,9 @@
     </Compile>
     <Compile Include="Views\WindowAddMatch.xaml.cs">
       <DependentUpon>WindowAddMatch.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WindowAddSeason.xaml.cs">
+      <DependentUpon>WindowAddSeason.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WindowBettor.xaml.cs">
       <DependentUpon>WindowBettor.xaml</DependentUpon>
@@ -164,6 +169,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\WindowAddMatch.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\WindowAddSeason.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
