--- a/TippspielClient/TippspielClient.csproj
+++ b/TippspielClient/TippspielClient.csproj
@@ -65,19 +65,20 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Controller\UserPanelController.cs" />
+    <Compile Include="Controller\MainWindowController.cs" />
+    <Compile Include="MatchDay.cs" />
+    <Compile Include="ViewModels\WindowLoginViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="ViewModels\UserPanelViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\UserPanel.xaml.cs">
-      <DependentUpon>UserPanel.xaml</DependentUpon>
+    <Compile Include="Views\WindowLogin.xaml.cs">
+      <DependentUpon>WindowLogin.xaml</DependentUpon>
     </Compile>
     <Compile Include="WcfHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\MainWindowController.cs" />
+    <Compile Include="Controller\WindowLoginController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -155,7 +156,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\UserPanel.xaml">
+    <Page Include="Views\WindowLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
